[tool.poetry]
name = "selectolax-parser"
version = "0.1.0"
description = ""
authors = ["KGFSB_spy <sacrumterra@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selectolax = "^0.3.21"
httpx = "^0.27.2"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
